tests/baselines/reference/assignmentCompatability41.errors.txt
==== tests/cases/compiler/assignmentCompatability41.ts (1 errors) ====
    module __test1__ {
        export interface interfaceWithPublicAndOptional<T,U> { one: T; two?: U; };  var obj4: interfaceWithPublicAndOptional<number,string> = { one: 1 };;
        export var __val__obj4 = obj4;
    }
    module __test2__ {
        export        class classWithTwoPrivate<T,U> { constructor(private one: T, private two: U) {} }  var x6 = new classWithTwoPrivate(1, "a");;
        export var __val__x6 = x6;
    }
    __test2__.__val__x6 = __test1__.__val__obj4
    ~~~~~~~~~~~~~~~~~~~
!!! assignmentCompatability41.ts(9,1): error TS2012: Cannot convert '__test1__.interfaceWithPublicAndOptional<number, string>' to '__test2__.classWithTwoPrivate<number, string>':
!!! 	Property 'one' defined as public in type '__test1__.interfaceWithPublicAndOptional<T, U>' is defined as private in type '__test2__.classWithTwoPrivate<T, U>'.